auto publishing updates to notebooks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c32b48c4",
+   "id": "cef84dde",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2089675",
+   "id": "d1e6ea35",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd7a6127",
+   "id": "a7d05df7",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e0366d2",
+   "id": "d88b4eea",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3acac2",
+   "id": "8e91dc36",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87762d2a",
+   "id": "1a3eefb0",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79ce542f",
+   "id": "c9dc4d6f",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "060c59a8",
+   "id": "7e6f3128",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -102,7 +102,7 @@
   }
  ],
  "metadata": {
-  "date": 1761799603.47068,
+  "date": 1762728654.6578066,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
