--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d442350c",
+   "id": "e377cb8f",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd1e86b",
+   "id": "5a0ee7bf",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a17546",
+   "id": "05415643",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff693833",
+   "id": "a18b95ec",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d250b59c",
+   "id": "066fa19e",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad63453e",
+   "id": "dfa73789",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff4b9453",
+   "id": "48a2fe83",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66e55a11",
+   "id": "e10606aa",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc77adf1",
+   "id": "c5c2e78e",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "746037b6",
+   "id": "c9456fa1",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa25508",
+   "id": "8f37d9f5",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0de9f98c",
+   "id": "af29a57d",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed0dcf12",
+   "id": "f7c60462",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d766e73",
+   "id": "c5a5d210",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33fdfa39",
+   "id": "9b0e8a34",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78aa189d",
+   "id": "71facb1e",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62261f45",
+   "id": "760150df",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6a8d43",
+   "id": "bee11d0e",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44b4837",
+   "id": "f1fefd28",
    "metadata": {
     "hide-output": false
    },
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45925df",
+   "id": "87be6eeb",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f5abe8",
+   "id": "deab5f63",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fec8bdf",
+   "id": "35fc8fbe",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbb1f513",
+   "id": "17d8ad24",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffdf62ab",
+   "id": "4d953c82",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76e3b10f",
+   "id": "1f1dcefd",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ae3a97",
+   "id": "ef248c30",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ec0744",
+   "id": "ce961764",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a326b32f",
+   "id": "84ef12c5",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74faf710",
+   "id": "7b41ebab",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df50f121",
+   "id": "7b395eaa",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cf937c1",
+   "id": "41a3edf5",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "732013ef",
+   "id": "c358dc1a",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f482f52",
+   "id": "d38bfea7",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8411c6",
+   "id": "29c8ea6e",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de3f0d8",
+   "id": "6473de7b",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46bdc4cc",
+   "id": "a555530f",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a57522b1",
+   "id": "bb156a6f",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd79030c",
+   "id": "d20f2e6a",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dddf7472",
+   "id": "71c16212",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3ba39b7",
+   "id": "604d5ef4",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd9ca823",
+   "id": "482b23b2",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e8241a",
+   "id": "7accb913",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "577385fc",
+   "id": "f7430089",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eba46ab",
+   "id": "113738ff",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c99360",
+   "id": "9856bae3",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ebde033",
+   "id": "538148a3",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc3ec96e",
+   "id": "6910cfd7",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78068bf7",
+   "id": "6faf2535",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e403ef78",
+   "id": "2c41d080",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4573f6e",
+   "id": "b02e513b",
    "metadata": {
     "hide-output": false
    },
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b14f6eb2",
+   "id": "97fff18b",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb810283",
+   "id": "7c94e198",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f981510",
+   "id": "7ddb7d4f",
    "metadata": {
     "hide-output": false
    },
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44d0b6ad",
+   "id": "e2216882",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e024d9c",
+   "id": "8ecd1a2f",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a8ae286",
+   "id": "12faa745",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5708f6eb",
+   "id": "43d40761",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ba228c",
+   "id": "23d15557",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a14debb8",
+   "id": "2e77b5f8",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63384fff",
+   "id": "42814194",
    "metadata": {
     "hide-output": false
    },
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6dfffa2",
+   "id": "9483d27c",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a9a4f48",
+   "id": "3e7e06e8",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "161259ea",
+   "id": "61e354fc",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f9f3ed3",
+   "id": "1c7b081b",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71743bea",
+   "id": "6b68a938",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "972b577d",
+   "id": "21f227a9",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "491ebd3f",
+   "id": "4afedf2d",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a18a6cd",
+   "id": "5107b953",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1622b4b8",
+   "id": "47de290c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b18108",
+   "id": "68a000a7",
    "metadata": {
     "hide-output": false
    },
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf6efa2",
+   "id": "9a96e4b5",
    "metadata": {
     "hide-output": false
    },
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61bcf64c",
+   "id": "f1c3e74d",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28fe75b6",
+   "id": "f54d3218",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab5db80a",
+   "id": "44b56e40",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d5a959",
+   "id": "72825d03",
    "metadata": {
     "hide-output": false
    },
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac31ea9c",
+   "id": "97b841e0",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e267fc77",
+   "id": "ff2d99d5",
    "metadata": {
     "hide-output": false
    },
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66205a77",
+   "id": "d263dde2",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1498,7 +1498,7 @@
   }
  ],
  "metadata": {
-  "date": 1761799603.954684,
+  "date": 1762728655.1789393,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
