--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b3de17ad",
+   "id": "c380015b",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6be41dd",
+   "id": "f01bd619",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2ae0de9",
+   "id": "53c85c89",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7af2afb",
+   "id": "0792b57f",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72f67355",
+   "id": "6fa17ac1",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d852943",
+   "id": "ff9f43e8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5f6a3d3",
+   "id": "ab20ef3e",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ca1b90",
+   "id": "84997bc6",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6472bbe",
+   "id": "b41004f6",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b12b7085",
+   "id": "05c1db0b",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b02c0a8b",
+   "id": "bd83a4b3",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07091413",
+   "id": "330939fc",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79e7072d",
+   "id": "119d54b8",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23e6c190",
+   "id": "f507df94",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac9a0e62",
+   "id": "0a2d6c28",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918a5df2",
+   "id": "7d42588b",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d03bc115",
+   "id": "337a6b72",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60419050",
+   "id": "c4c75311",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ab208c",
+   "id": "c5c177e4",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "988845f2",
+   "id": "5566d924",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c5e6198",
+   "id": "e30e8b5c",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e64e4e3",
+   "id": "c9ec58b2",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a23be7e",
+   "id": "bba041fc",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a27112",
+   "id": "99ad3ff3",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28848193",
+   "id": "4ac06be2",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f80f91e",
+   "id": "5724d498",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c7db877",
+   "id": "949ac0e0",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ad9da5",
+   "id": "936da58a",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc846b30",
+   "id": "ecab2e0f",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196f054d",
+   "id": "7154e516",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59082db7",
+   "id": "7f94caee",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25358523",
+   "id": "40a5f916",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deb22a79",
+   "id": "cba8dbc0",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fffe72f3",
+   "id": "5bfb182c",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "364e29d9",
+   "id": "096d1699",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1c2d9d",
+   "id": "93b407a2",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -821,7 +821,7 @@
   }
  ],
  "metadata": {
-  "date": 1761799603.4582753,
+  "date": 1762728654.644539,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
