--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce79b7a0",
+   "id": "94fa4c8a",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "290e5565",
+   "id": "86f4ca95",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e8dcf3",
+   "id": "8c27f2bb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674653c5",
+   "id": "82577280",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db534746",
+   "id": "9a75f2a4",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db473c97",
+   "id": "06c234ff",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a005163",
+   "id": "a3a94145",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b35266",
+   "id": "d318f94c",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ceefe2e",
+   "id": "229a938d",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da08938",
+   "id": "15525999",
    "metadata": {
     "hide-output": false
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a17b44e7",
+   "id": "24a90468",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ca7478",
+   "id": "70df9144",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc43cc42",
+   "id": "e24b74a7",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edb95ff",
+   "id": "b74b7aa4",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be16a581",
+   "id": "a00032cb",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab50a662",
+   "id": "356eb8c7",
    "metadata": {
     "hide-output": false
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac26db1a",
+   "id": "f93ef347",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccf1f17d",
+   "id": "78dfad0c",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c74945",
+   "id": "806118af",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83a477fa",
+   "id": "39ed104b",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3125114",
+   "id": "68882a50",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e16d73",
+   "id": "404cd145",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e857a6aa",
+   "id": "dab45fc8",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d62b275",
+   "id": "66640750",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa12a162",
+   "id": "d147e1bc",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f4dadc5",
+   "id": "f7de30c0",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d5a6ee",
+   "id": "10bf4f9f",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba17cfc",
+   "id": "97804605",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01e2cff",
+   "id": "b489c349",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f8cecb",
+   "id": "c4d5de42",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a9fd539",
+   "id": "34e7baf4",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78724aba",
+   "id": "8cc81ab5",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea226f0",
+   "id": "467d516a",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bebf08ae",
+   "id": "15516f45",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4681dba1",
+   "id": "fa6a98f8",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f55c701",
+   "id": "984857d8",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0feb550d",
+   "id": "69646228",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bde27268",
+   "id": "6622efac",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da95d86f",
+   "id": "df90d714",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c76c3652",
+   "id": "9d43da9d",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc98f96",
+   "id": "4e7a2d78",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81e07c5",
+   "id": "fd1b6dd1",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ec955ac",
+   "id": "d5829336",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d51ae02",
+   "id": "dbfa058e",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e23b822",
+   "id": "087854e9",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29aa530d",
+   "id": "488eb9c7",
    "metadata": {
     "hide-output": false
    },
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc16d93e",
+   "id": "7b8f4b3f",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec87417",
+   "id": "e2c05dce",
    "metadata": {
     "hide-output": false
    },
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a471ebff",
+   "id": "e38aa457",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   }
  ],
  "metadata": {
-  "date": 1761799603.4928727,
+  "date": 1762728654.681442,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
