--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e88f7a0",
+   "id": "a07b5b13",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8afd90a",
+   "id": "7a9b0fcb",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b5b537",
+   "id": "e22eadcc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be1647a",
+   "id": "943a02db",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14992a66",
+   "id": "91fcbb1d",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b8ab39",
+   "id": "3edc1728",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "093af0e4",
+   "id": "3b3377bf",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99e921b1",
+   "id": "e2117b5f",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cfc6708",
+   "id": "5c159b4d",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5e3da9",
+   "id": "07def780",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c16d67",
+   "id": "f64c1808",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ec610d",
+   "id": "839dbace",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56c6f687",
+   "id": "bc68a1f0",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "870ac218",
+   "id": "6ed16080",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5541f47c",
+   "id": "9848f24c",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a78d0da0",
+   "id": "0f4a1086",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b689c40",
+   "id": "71e4b17a",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7758f48f",
+   "id": "17c332a5",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b9681dd",
+   "id": "44a82231",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa6e9fe8",
+   "id": "8188a9b6",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b36355",
+   "id": "27be4e17",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d2d7164",
+   "id": "7da15585",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89259cf1",
+   "id": "10ae9cf7",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c52da10a",
+   "id": "e1d280ea",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28d6935f",
+   "id": "398fc9d0",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "782e3fab",
+   "id": "571cb0f8",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e154dd6f",
+   "id": "758e61b8",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e2dba42",
+   "id": "7a9b8585",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871eb1e8",
+   "id": "e512ab4a",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45983945",
+   "id": "be4391d4",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e4e6fbc",
+   "id": "df026d8e",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55f1581c",
+   "id": "0b2f8ae9",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc1e468",
+   "id": "bed1644c",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d80f5ba",
+   "id": "147932b1",
    "metadata": {
     "hide-output": false
    },
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ae53b1c",
+   "id": "82818f26",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db205c2f",
+   "id": "9e559da7",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "049fed90",
+   "id": "dccd14aa",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ab99ead",
+   "id": "4ffbdd75",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ca18c2",
+   "id": "d63a4aa4",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5f1c963",
+   "id": "2c5623d2",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8387bc0f",
+   "id": "d49514cd",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdcebfbf",
+   "id": "981b0658",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fdbd687",
+   "id": "fe3ae3a2",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "736bc077",
+   "id": "7d369c9f",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfa75a1",
+   "id": "9fbddf2e",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60c526a4",
+   "id": "54e62370",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43be0c93",
+   "id": "08c94b6c",
    "metadata": {
     "hide-output": false
    },
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06e89809",
+   "id": "fa22b82d",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e54d98",
+   "id": "15f1e208",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f170dade",
+   "id": "ba72e339",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4ab700",
+   "id": "0b623d8f",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc333733",
+   "id": "1a8ab849",
    "metadata": {
     "hide-output": false
    },
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7767d02b",
+   "id": "44e41aa7",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ee03823",
+   "id": "7fcd1c80",
    "metadata": {
     "hide-output": false
    },
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dce287c",
+   "id": "12f52638",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "854c97e6",
+   "id": "47235b58",
    "metadata": {
     "hide-output": false
    },
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628c0ab2",
+   "id": "31557f1a",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f2de0d1",
+   "id": "87e170de",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed733be",
+   "id": "25875f33",
    "metadata": {
     "hide-output": false
    },
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b30a07",
+   "id": "be932a40",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd6bf6d",
+   "id": "a531a6f7",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6437e865",
+   "id": "ee073440",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8786b7",
+   "id": "a733c7f4",
    "metadata": {
     "hide-output": false
    },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "702e7818",
+   "id": "676b4458",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e428f2f",
+   "id": "2d8fc279",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6ca9e5d",
+   "id": "040a2dc8",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852edbe8",
+   "id": "a0a66305",
    "metadata": {
     "hide-output": false
    },
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e9caca",
+   "id": "09a252ef",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5323b287",
+   "id": "d37ab87a",
    "metadata": {
     "hide-output": false
    },
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6be74e84",
+   "id": "96154075",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7485ca62",
+   "id": "a1065123",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace50e26",
+   "id": "c8fb7827",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d180b486",
+   "id": "e1ef102e",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ba9028",
+   "id": "1217bea0",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b572e79",
+   "id": "4ac7614c",
    "metadata": {
     "hide-output": false
    },
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46da0210",
+   "id": "e860cacf",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1580,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8df9e86",
+   "id": "db5c1fde",
    "metadata": {
     "hide-output": false
    },
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f939e05",
+   "id": "879676c4",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aa9b74f",
+   "id": "703465bf",
    "metadata": {
     "hide-output": false
    },
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dcf84aa",
+   "id": "7ce0a75d",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "019f46e0",
+   "id": "ed49588a",
    "metadata": {
     "hide-output": false
    },
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a588cf30",
+   "id": "5c48adb1",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1650,7 +1650,7 @@
   }
  ],
  "metadata": {
-  "date": 1761799603.7618,
+  "date": 1762728654.9748912,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
